--- a/.github/workflows/vorpal-code-scanning.yml
+++ b/.github/workflows/vorpal-code-scanning.yml
@@ -30,6 +30,6 @@ jobs:
         uses: Checkmarx/vorpal-reviewdog-github-action@v1.1.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          source_path: "app.js" # Adjust this if your code is in a subdirectory
+          source_path: "NodeGoat/app/assets/vendor/bootstrap/bootstrap-tour.js" # Adjust this if your code is in a subdirectory
           reporter: github-pr-review
           level: warning
