--- a/.github/workflows/kics-scan.yaml
+++ b/.github/workflows/kics-scan.yaml
@@ -22,7 +22,7 @@ jobs:
         uses: Checkmarx/kics-github-action@v2.1.3
         with:
           # Paths to scan, here we use the entire repository
-          path: '.'
+          path: '/'
           output_path: myResults/
 
       # Display the results in JSON format
