--- a/.github/workflows/kics-scan.yaml
+++ b/.github/workflows/kics-scan.yaml
@@ -19,20 +19,20 @@ jobs:
           fetch-depth: 0
 
       - name: Create output directory
-        run: mkdir -p $HOME/Documents/Dev/NodeGoat/results  # Use $HOME to refer to the home directory
+        run: mkdir -p $GITHUB_WORKSPACE/Documents/Dev/NodeGoat/results  # Use $GITHUB_WORKSPACE for the correct directory
 
       - name: Run KICS Scan
         uses: Checkmarx/kics-github-action@v2.1.3
         with:
           path: '/'
-          output_path: $HOME/Documents/Dev/NodeGoat/results  # Set output path to the desired location
+          output_path: $GITHUB_WORKSPACE/Documents/Dev/NodeGoat/results  # Correct output path using $GITHUB_WORKSPACE
           args: '--verbose --no-progress --output-format json'
 
       - name: List files in output directory
-        run: ls -al $HOME/Documents/Dev/NodeGoat/results  # List files in the results directory
+        run: ls -al $GITHUB_WORKSPACE/Documents/Dev/NodeGoat/results  # List files to ensure the results are saved
 
       - name: Upload KICS Results as Artifact
         uses: actions/upload-artifact@v3
         with:
           name: kics-results
-          path: $HOME/Documents/Dev/NodeGoat/results  # Upload results as artifact
+          path: $GITHUB_WORKSPACE/Documents/Dev/NodeGoat/results  # Upload results as artifact
