--- a/.github/workflows/vorpal-code-scanning.yml
+++ b/.github/workflows/vorpal-code-scanning.yml
@@ -34,19 +34,23 @@ jobs:
           reporter: github-pr-review
           level: warning
 
-      # Upload result file as artifact
+      - name: Move Results to Results Folder
+        run: |
+          mkdir -p ./results
+          mv /github/workspace/result.errorformat ./results/results.json || echo "No results file generated"
+
       - name: Upload Scan Results
         uses: actions/upload-artifact@v3
         with:
-          path: '.'
-          output_path: ./results
-          additional_args: '--log-level DEBUG'
+          name: scan-results
+          path: ./results/results.json # Only upload the results.json file
+
 
       - name: Verify results
         run: |
           if [ ! -f ./results/results.json ]; then
-            echo “Vorpal scan did not generate results.json"
+            echo "Error: Vorpal scan did not generate results.json"
             exit 1
           else
-            echo "Scan completed successfully"
+            echo "Vorpal scan completed successfully and results.json is available."
           fi
