--- a/.github/workflows/vorpal-code-scanning.yml
+++ b/.github/workflows/vorpal-code-scanning.yml
@@ -38,19 +38,19 @@ jobs:
       - name: Check for results directory and move result files
         run: |
           echo "Listing contents of the workspace before any checks:"
-          ls -al /github/workspace
-          
+          ls -al .
+
           if [ ! -d ./results ]; then
             echo "Results directory does not exist. Creating..."
             mkdir ./results
           fi
           
-          if [ -f /github/workspace/result.errorformat ]; then
+          if [ -f ./result.errorformat ]; then
             echo "Scan result file found."
-            mv /github/workspace/result.errorformat ./results/
+            mv ./result.errorformat ./results/
           else
             echo "No result file found. Listing all files in workspace for debug:"
-            ls -al /github/workspace
+            ls -al .
             exit 1
           fi
 
@@ -58,14 +58,14 @@ jobs:
       - name: Archive scan results
         run: |
           echo "Archiving the results directory."
-          tar -czf /github/workspace/results.tar.gz -C ./results .
+          tar -czf ./results.tar.gz -C ./results .
 
       # Upload the archived results
       - name: Upload Scan Results
         uses: actions/upload-artifact@v3
         with:
           name: vorpal-scan-results
-          path: /github/workspace/results.tar.gz
+          path: ./results.tar.gz
 
       # Verify results file was uploaded
       - name: Verify results
