made a new change

--- a/.github/workflows/kics-scan.yaml
+++ b/.github/workflows/kics-scan.yaml
@@ -43,4 +43,4 @@ jobs:
           name: kics-scan-results
           path: ./results/results.json
 
-          # Change me: Hello
+          # Change me: Hello Everyone
